--- a/elder.html
+++ b/elder.html
@@ -2,11 +2,10 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Старший модератор</title>
+<title>Elder Panel</title>
 <link rel="stylesheet" href="hud.css">
 </head>
 <body>
-
 <div class="hud" style="max-width:1100px;margin:40px auto;">
   <h1>Панель старшего модератора</h1>
   <div id="list"></div>
@@ -15,69 +14,71 @@
 <script type="module">
 import { auth, db } from './firebase.js';
 import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
-import { collection, query, orderBy, getDocs, doc, updateDoc } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
+import { collection, query, orderBy, getDocs, doc, updateDoc, getDoc } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
 
-onAuthStateChanged(auth, async user => {
+onAuthStateChanged(auth, async user=>{
   if(!user) return location.href='index.html';
-  
+
   const meSnap = await getDoc(doc(db,'users',user.uid));
   const me = meSnap.data();
-
   if(me.role!=='elder') return location.href='main.html';
 
   const q = query(collection(db,'users'), orderBy('points','desc'));
   const snap = await getDocs(q);
 
-  snap.forEach(d => {
+  snap.forEach(d=>{
     const u = d.data();
 
     const row = document.createElement('div');
-    row.className = 'row';
-    row.style.gridTemplateColumns = '1fr 100px 140px 160px 160px';
+    row.className='row';
+    row.style.display='grid';
+    row.style.gridTemplateColumns='2fr 1fr 1fr 1fr 1fr';
+    row.style.alignItems='center';
+    row.style.marginBottom='6px';
 
-    // Кнопка смены роли
+    const nickDiv = document.createElement('div');
+    nickDiv.textContent = u.nick + (u.role==='elder'? ' [Старший]':'') + (u.role==='moderator'? ' [Модер]':'');
+
+    const input = document.createElement('input');
+    input.type='number';
+    input.value = u.points;
+    input.style.width='70px';
+
+    const pointsBtn = document.createElement('button');
+    pointsBtn.textContent='Баллы';
+    pointsBtn.onclick=async()=>{ await updateDoc(doc(db,'users',d.id),{ points:Number(input.value) }); };
+
     const roleBtn = document.createElement('button');
     const verBtn = document.createElement('button');
 
-    const setRoleBtn = () => {
-      roleBtn.textContent = u.role==='moderator' ? 'Снять модерку' : 'Назначить модером';
-      roleBtn.style.boxShadow = u.role==='moderator' ? '0 0 15px #ff4d4d' : '0 0 15px #00aaff';
-      roleBtn.style.background = u.role==='moderator' ? '#ff4d4d33' : '#00aaff33';
+    const setRoleBtn=()=>{
+      roleBtn.textContent = u.role==='moderator'?'Снять модерку':'Назначить модером';
+      roleBtn.style.background = u.role==='moderator'? '#ff4d4d33':'#00aaff33';
+      roleBtn.style.boxShadow = u.role==='moderator'? '0 0 12px #ff4d4d':'0 0 12px #00aaff';
     };
-    const setVerBtn = () => {
-      verBtn.textContent = u.situation==='verified' ? 'Снять верификацию' : 'Верифицировать';
-      verBtn.style.boxShadow = u.situation==='verified' ? '0 0 15px #ff4d4d' : '0 0 15px #00aaff';
-      verBtn.style.background = u.situation==='verified' ? '#ff4d4d33' : '#00aaff33';
+    const setVerBtn=()=>{
+      verBtn.textContent = u.situation==='verified'?'Снять верификацию':'Верифицировать';
+      verBtn.style.background = u.situation==='verified'? '#ff4d4d33':'#00aaff33';
+      verBtn.style.boxShadow = u.situation==='verified'? '0 0 12px #ff4d4d':'0 0 12px #00aaff';
     };
+    setRoleBtn(); setVerBtn();
 
-    setRoleBtn();
-    setVerBtn();
-
-    roleBtn.onclick = async () => {
-      const newRole = u.role==='moderator' ? 'player' : 'moderator';
+    roleBtn.onclick=async()=>{
+      const newRole = u.role==='moderator'?'player':'moderator';
       await updateDoc(doc(db,'users',d.id),{ role:newRole });
-      u.role=newRole; // локально
+      u.role=newRole;
       setRoleBtn();
     };
-
-    verBtn.onclick = async () => {
-      const newSit = u.situation==='verified' ? 'not requested' : 'verified';
+    verBtn.onclick=async()=>{
+      const newSit = u.situation==='verified'?'not requested':'verified';
       await updateDoc(doc(db,'users',d.id),{ situation:newSit });
       u.situation=newSit;
       setVerBtn();
     };
 
-    row.innerHTML = `<div>${u.nick||'(без ника)'} ${u.role==='elder'?'[Старший]':''}</div>
-                     <input type="number" value="${u.points}">
-                     <button>Баллы</button>`;
-    
-    const input = row.querySelector('input');
-    const pointsBtn = row.querySelector('button');
-
-    pointsBtn.onclick = async () => {
-      await updateDoc(doc(db,'users',d.id),{ points:Number(input.value) });
-    };
-
+    row.appendChild(nickDiv);
+    row.appendChild(input);
+    row.appendChild(pointsBtn);
     row.appendChild(roleBtn);
     row.appendChild(verBtn);
 
@@ -85,6 +86,5 @@ onAuthStateChanged(auth, async user => {
   });
 });
 </script>
-
 </body>
 </html>
