--- a/nick.html
+++ b/nick.html
@@ -6,10 +6,8 @@
 <link rel="stylesheet" href="hud.css">
 </head>
 <body>
-
 <div class="hud" style="max-width:400px;margin:80px auto;">
   <h1>Введите ник</h1>
-
   <input id="nick" placeholder="Ваш ник">
   <button id="save">Продолжить</button>
   <p id="error" style="color:red;margin-top:10px;"></p>
@@ -18,8 +16,7 @@
 <script type="module">
 import { auth, db } from './firebase.js';
 import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
-import { doc, setDoc, getDoc, collection, query, where, getDocs } 
-from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
+import { doc, setDoc, getDoc, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
 
 const input = document.getElementById('nick');
 const btn = document.getElementById('save');
@@ -27,20 +24,18 @@ const error = document.getElementById('error');
 
 onAuthStateChanged(auth, async user => {
   if(!user) location.href='index.html';
-
   const userRef = doc(db, 'users', user.uid);
   const userSnap = await getDoc(userRef);
+  const userData = userSnap.data() || {};
 
-  // Если ник уже есть, запрещаем менять
-  if(userSnap.exists() && userSnap.data().nick){
+  // Только если ник и situation уже verified редиректим
+  if(userData.nick && userData.situation==='verified'){
     location.href = 'main.html';
-    return;
   }
 
   btn.onclick = async () => {
     error.textContent = '';
     const nickValue = input.value.trim();
-
     if(nickValue.length < 3){
       error.textContent = 'Ник слишком короткий (min 3 символа)';
       return;
@@ -54,7 +49,7 @@ onAuthStateChanged(auth, async user => {
       return;
     }
 
-    // Запись ника, почты, роли и situation
+    // Сохраняем ник, почту, роль, points и situation
     await setDoc(userRef,{
       nick: nickValue,
       email: user.email,
@@ -63,11 +58,10 @@ onAuthStateChanged(auth, async user => {
       situation: 'verified'
     }, { merge: true });
 
-    // Моментальный переход без reload
-    window.location.href = 'main.html';
+    // Переход на main.html
+    location.href = 'main.html';
   };
 });
 </script>
-
 </body>
 </html>
