--- a/main.html
+++ b/main.html
@@ -25,8 +25,7 @@ const err = document.getElementById('err');
 const btn = document.getElementById('check');
 
 onAuthStateChanged(auth, async user => {
-  if(!user) return location.href='index.html';
-
+  if(!user) location.href='index.html';
   const userSnap = await getDoc(doc(db,'users',user.uid));
   const u = userSnap.data();
 
