--- a/elder.html
+++ b/elder.html
@@ -18,7 +18,6 @@ import { collection, query, orderBy, getDocs, doc, updateDoc, getDoc } from "htt
 
 onAuthStateChanged(auth, async user=>{
   if(!user) return location.href='index.html';
-
   const meSnap = await getDoc(doc(db,'users',user.uid));
   const me = meSnap.data();
   if(me.role!=='elder') return location.href='main.html';
@@ -53,13 +52,15 @@ onAuthStateChanged(auth, async user=>{
 
     const setRoleBtn=()=>{
       roleBtn.textContent = u.role==='moderator'?'Снять модерку':'Назначить модером';
-      roleBtn.style.background = u.role==='moderator'? '#ff4d4d33':'#00aaff33';
-      roleBtn.style.boxShadow = u.role==='moderator'? '0 0 12px #ff4d4d':'0 0 12px #00aaff';
+      roleBtn.style.background = u.role==='moderator' ? '#ff4d4d' : '#00aaff';
+      roleBtn.style.color = '#fff';
+      roleBtn.style.boxShadow = u.role==='moderator' ? '0 0 12px #ff4d4d' : '0 0 12px #00aaff';
     };
     const setVerBtn=()=>{
       verBtn.textContent = u.situation==='verified'?'Снять верификацию':'Верифицировать';
-      verBtn.style.background = u.situation==='verified'? '#ff4d4d33':'#00aaff33';
-      verBtn.style.boxShadow = u.situation==='verified'? '0 0 12px #ff4d4d':'0 0 12px #00aaff';
+      verBtn.style.background = u.situation==='verified' ? '#ff4d4d' : '#00aaff';
+      verBtn.style.color = '#fff';
+      verBtn.style.boxShadow = u.situation==='verified' ? '0 0 12px #ff4d4d' : '0 0 12px #00aaff';
     };
     setRoleBtn(); setVerBtn();
 
