--- a/elder.html
+++ b/elder.html
@@ -2,8 +2,66 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Elder Panel</title>
+<title>Старший модератор</title>
 <link rel="stylesheet" href="hud.css">
+<style>
+  .row {
+    display: grid;
+    grid-template-columns: 2fr 1fr 1fr 1fr 1fr;
+    align-items: center;
+    gap: 10px; /* Расстояние между кнопками */
+    margin-bottom: 8px;
+    padding: 6px;
+    background: rgba(0, 0, 50, 0.4);
+    border-radius: 8px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.5);
+  }
+
+  .row div, .row input, .row button {
+    font-family: 'Orbitron', sans-serif;
+    color: #00ffff;
+  }
+
+  .row input {
+    width: 60px;
+    text-align: center;
+    border-radius: 4px;
+    border: 1px solid #00ffff;
+    background: rgba(0,0,0,0.5);
+    color: #00ffff;
+  }
+
+  .row button {
+    padding: 4px 8px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    color: #fff;
+    transition: 0.2s;
+  }
+
+  .points-btn {
+    background: #0088ff;
+    box-shadow: 0 0 12px #0088ff;
+  }
+  .role-btn.active {
+    background: #ff4d4d;
+    box-shadow: 0 0 12px #ff4d4d;
+  }
+  .role-btn.inactive {
+    background: #0088ff;
+    box-shadow: 0 0 12px #0088ff;
+  }
+  .ver-btn.active {
+    background: #ff4d4d;
+    box-shadow: 0 0 12px #ff4d4d;
+  }
+  .ver-btn.inactive {
+    background: #0088ff;
+    box-shadow: 0 0 12px #0088ff;
+  }
+</style>
 </head>
 <body>
 <div class="hud" style="max-width:1100px;margin:40px auto;">
@@ -30,10 +88,6 @@ onAuthStateChanged(auth, async user=>{
 
     const row = document.createElement('div');
     row.className='row';
-    row.style.display='grid';
-    row.style.gridTemplateColumns='2fr 1fr 1fr 1fr 1fr';
-    row.style.alignItems='center';
-    row.style.marginBottom='6px';
 
     const nickDiv = document.createElement('div');
     nickDiv.textContent = u.nick + (u.role==='elder'? ' [Старший]':'') + (u.role==='moderator'? ' [Модер]':'');
@@ -41,28 +95,39 @@ onAuthStateChanged(auth, async user=>{
     const input = document.createElement('input');
     input.type='number';
     input.value = u.points;
-    input.style.width='70px';
 
     const pointsBtn = document.createElement('button');
     pointsBtn.textContent='Баллы';
-    pointsBtn.onclick=async()=>{ await updateDoc(doc(db,'users',d.id),{ points:Number(input.value) }); };
+    pointsBtn.className='points-btn';
+    pointsBtn.onclick=async()=>{ 
+      await updateDoc(doc(db,'users',d.id),{ points:Number(input.value) });
+    };
 
     const roleBtn = document.createElement('button');
     const verBtn = document.createElement('button');
 
     const setRoleBtn=()=>{
-      roleBtn.textContent = u.role==='moderator'?'Снять модерку':'Назначить модером';
-      roleBtn.style.background = u.role==='moderator' ? '#ff4d4d' : '#00aaff';
-      roleBtn.style.color = '#fff';
-      roleBtn.style.boxShadow = u.role==='moderator' ? '0 0 12px #ff4d4d' : '0 0 12px #00aaff';
+      if(u.role==='moderator'){
+        roleBtn.textContent='Снять модерку';
+        roleBtn.className='role-btn active';
+      } else {
+        roleBtn.textContent='Назначить модером';
+        roleBtn.className='role-btn inactive';
+      }
     };
+
     const setVerBtn=()=>{
-      verBtn.textContent = u.situation==='verified'?'Снять верификацию':'Верифицировать';
-      verBtn.style.background = u.situation==='verified' ? '#ff4d4d' : '#00aaff';
-      verBtn.style.color = '#fff';
-      verBtn.style.boxShadow = u.situation==='verified' ? '0 0 12px #ff4d4d' : '0 0 12px #00aaff';
+      if(u.situation==='verified'){
+        verBtn.textContent='Снять верификацию';
+        verBtn.className='ver-btn active';
+      } else {
+        verBtn.textContent='Верифицировать';
+        verBtn.className='ver-btn inactive';
+      }
     };
-    setRoleBtn(); setVerBtn();
+
+    setRoleBtn();
+    setVerBtn();
 
     roleBtn.onclick=async()=>{
       const newRole = u.role==='moderator'?'player':'moderator';
