--- a/main.html
+++ b/main.html
@@ -2,46 +2,47 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Главная</title>
-<link rel="stylesheet" href="hud.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>GDashBoard — Главная</title>
+<style>
+  body { margin:0; font-family:'Orbitron',sans-serif; background:linear-gradient(135deg,#0a0a1f,#001f3f); color:#00f3ff; }
+  header { background:#001f3f; padding:1rem; text-align:center; font-size:1.8rem; box-shadow:0 0 10px #00f3ff44; }
+  nav ul { display:flex; justify-content:center; list-style:none; padding:0.5rem; background:#001f3f66; margin:0; }
+  nav li { margin:0 1rem; }
+  nav a { color:#00f3ff; text-decoration:none; font-weight:bold; padding:0.3rem 0.6rem; border-radius:6px; transition:0.2s; }
+  nav a:hover { background:#00f3ff22; }
+  .content { max-width:1000px; margin:auto; padding:2rem; text-align:center; }
+  button { padding:0.5rem 1rem; background:#00f3ff33; border:1px solid #00f3ff; color:#00f3ff; cursor:pointer; font-family:'Orbitron',sans-serif; border-radius:6px; transition:0.2s; margin-top:1rem; }
+  button:hover { background:#00f3ff55; }
+</style>
 </head>
 <body>
-
-<div class="hud top">
-  <button id="logoutBtn">Выйти</button>
+<header>GDashBoard — Главная</header>
+<nav>
+  <ul>
+    <li><a href="main.html">Главная</a></li>
+    <li><a href="leaderboard.html">Лидерборд</a></li>
+    <li><a href="send.html">Отправка прохождений</a></li>
+    <li><a href="moderator.html">Модераторская</a></li>
+    <li><a href="elder.html">Старший модератор</a></li>
+    <li><a href="#" onclick="logout()">Выход</a></li>
+  </ul>
+</nav>
+<div class="content">
+  <h2>Добро пожаловать в GDashBoard!</h2>
+  <p>Отслеживайте свой прогресс, отправляйте прохождения и смотрите лидерборд.</p>
 </div>
-
-<div class="hud center">
-  <h2 id="nick"></h2>
-  <p>Баллы: <span id="points"></span></p>
-  <button onclick="location.href='leaderboard.html'">Лидерборд</button>
-</div>
-
 <script type="module">
-import { auth, db } from './firebase.js';
-import { onAuthStateChanged, signOut } from
-  "https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js";
-import { doc, getDoc } from
-  "https://www.gstatic.com/firebasejs/10.14.0/firebase-firestore.js";
+import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.6.0/firebase-auth.js";
+import { app } from "./firebase.js";
 
-onAuthStateChanged(auth, async (user) => {
-  if (!user) return location.href='index.html';
+const auth = getAuth(app);
 
-  const snap = await getDoc(doc(db,'users',user.uid));
-  if (!snap.exists() || snap.data().situation !== 'verified') {
-    location.href='nick.html';
-    return;
-  }
-
-  nick.textContent = snap.data().nick;
-  points.textContent = snap.data().points ?? 0;
+onAuthStateChanged(auth, user => {
+  if (!user || !user.emailVerified) window.location.href="./index.html";
 });
 
-logoutBtn.onclick = async () => {
-  await signOut(auth);
-  location.href='index.html';
-};
+window.logout = () => signOut(auth).then(()=>window.location.href="./index.html");
 </script>
-
 </body>
 </html>
