--- a/elder.html
+++ b/elder.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Старший модератор222</title>
+<title>Старший модератор</title>
 <link rel="stylesheet" href="hud.css">
 <style>
   .row {
@@ -154,3 +154,4 @@ onAuthStateChanged(auth, async user=>{
 </script>
 </body>
 </html>
+
